--- a/programming/index.html
+++ b/programming/index.html
@@ -6,7 +6,17 @@
   <title>Programming</title>
 </head>
 <body>
-  <!-- <script src="./binary-tree-min-length-between-nodes.js"></script> -->
+  <script src="./basic.js"></script>
+  <script src="./deepClone.js"></script>
+  <script src="./currying.js"></script>
+  <script src="./reverse-link-list.js"></script>
+  <script src="./promise.js"></script>
+  <script src="./promise.ts"></script>
   <script src="./tmpl.js"></script>
+  <script src="./compose-and-pip.js"></script>
+  <script src="./binary-search.js"></script>
+  <script src="./binary-tree-min-length-between-nodes.js"></script>
+  <script src='./tree.ts'></script>
+  <script src='./tree2.ts'></script>
 </body>
 </html>
